# ProStorege

./: .gitignore  main.py  pyproject.toml
DataBase/: ItemDataBase.db  ProDataBase.db  resource_db.qrc
images/: resource.qrc
src/: APIconector.py  AddFolderWindow.py  AddWindow.py  ChangeWindow.py  DBconector.py  InfoWindow.py  ItemWindow.py  LoginWindow.py  MainWindow.py  OperationWindows.py  PeriodWindow.py  TraderLoginWindow.py  UiConverter.py  UserController.py  resources.py  resources_db.py  styles.py
src/forms/: AddDirectoryForm.py  AddFolderForm.py  AddForm.py  ChangeForm.py  DirectoryForm.py  InfoForm.py  ItemForm.py  LoginForm.py  MainForm.py  OperationForm.py  PeriodForm.py  TraderLoginForm.py
ui/: AddDirectoryForm.ui  AddFolderForm.ui  AddForm.ui  ChangeForm.ui  DirectoryForm.ui  InfoForm.ui  ItemForm.ui  LoginForm.ui  MainForm.ui  OperationForm.ui  PeriodForm.ui  TraderLoginForm.ui
