[tool.poetry]
name = "prostorege"
version = "0.1.1"
description = "Приложение для автоматиации учета товаров и работы с кассой aQsi"
authors = ["AndreKo <saw271002@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyside6 = "~6.5.0"
numpy = "<=1.26.4"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.ruff]
exclude = [
    "generated_i18n_rc.py",
    "generated_assets_rc.py",
    "generated_qml_rc.py",
    "i18n_rc.py",
    "qml_rc.py",
    "assets_rc.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4